Fixed box content layout. word- wrap

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,10 @@ html {
 
 #box {
   background: #D9D9D995;
-  width: fit-content;
-  max-width: 22em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 24em;
   height: fit-content;
   padding: 1.5em;
   border-radius: 1em;
@@ -25,9 +27,8 @@ h1 {
 #boxContent {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   align-self: center;
-  
 }
 
 button {
@@ -49,16 +50,16 @@ input {
 }
 
 #result {
-  display: none;
+  display: block;
   font-family: 'IBM Plex Mono';
   font-style: normal;
   font-size: 1.5em;
   text-align: center;
-  width: fit-content;
-  height: 1em;
-  border: 1px dotted red;
+  width: 100%;
+  height: fit-content;
   color: none;
-  margin: 0.5em auto;
+  margin: 0.6em auto auto;
+  word-wrap: break-word;
 }
 
   
